--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
+
+<body {
+    background-color: lightblue;
+}
 <h1 style="color:purple;">Fortnite</h1>
 
 <p style="color:purple;">While it’s easy to see why millions of players are starting to play,
  Fortnite Battle Royale. 
- With the addicting battle royal rules like you only have one life and scavenging,
- but a cautious play isn’t rewarded, and its emphasis on gathering materials help/
+ With the addicting battle royal rules like you only have one life and scavenging.
+ A cautious play isn’t rewarded, and its emphasis on gathering materials help/
 save yourself or to confuse the enemy player.
  Its force the players into combat so the tension builds.
  For many player it feels like they like a small spook that makes Fornite Battle Royale so fun to play.</p>
+ 
+ <h1> Far Cry 5</h1>
 
 </body>
 
