--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<body {
+<style>
+body {
     background-color: lightblue;
 }
+</style>
 <h1 style="color:purple;">Fortnite</h1>
 
 <p style="color:purple;">While it’s easy to see why millions of players are starting to play,
