--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@ body {
 
 <p style="color:purple;">While it’s easy to see why millions of players are starting to play,
  Fortnite Battle Royale. 
- With the addicting battle royal rules like you only have one life and scavenging.
- A cautious play isn’t rewarded, and its emphasis on gathering materials help/
+ With the addicting battle royal rules like you only have one life and scavenging,
+ but a cautious play isn’t rewarded, and its emphasis on gathering materials help/
 save yourself or to confuse the enemy player.
  Its force the players into combat so the tension builds.
- For many player it feels like they like a small spook that makes Fornite Battle Royale so fun to play.</p>
+ For many player it feels like they like a small spook that makes Fornite Battle Royale so fun to play. Here is a review 
+ from my fellow classmate I think that fortnite is a creative game where 
+ there are many different gamemodes and I find the different gamemodes very creative. Further more I like this game because the updates bring many 
+ nice and game changing things to the game like the new weapons and also give the game more personality like the different skins. I rate this 4.3 out of 5 stars.</p>
+ <h1 style="color:golden;">PUBG</h1>
  
- <h1> Far Cry 5</h1>
+ <p style="color:golden;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
+ realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
+ a kill or be killer situation.
 
 </body>
 
