--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ save yourself or to confuse the enemy player.
  
  <p style="color:golden;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
- a kill or be killer situation.
+ a kill or be killer situation.I my opinion is that this game is the nost relistic Battle Royale games. 
 
 </body>
 
