--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ save yourself or to confuse the enemy player.
  <p style="color:gold;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
  a kill or be killer situation.I my opinion is that this game is the nost relistic Battle Royale games.</p> 
+    
+ <h1 style="color:orange;">Far Cry 5</h1>
+<p style="color:orange;"> As you may have know that Far cry 5 or FC 5 was a great game to watch and play. The games is based 
+on the protagonist The Deputy or commonly knows as Rook or Rookie and the antagonists The Seed which take control over the 
+country people and try to save the world from them selves. 
+With game play with most content creators they have taken the initial
+over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it.</p>
 
 </body>
 
