--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-    background-color: peach;
+    background-color:Aqua;
 }
 </style>
 <h1 style="color:purple;">Fortnite</h1>
