--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@ save yourself or to confuse the enemy player.
  a kill or be killer situation.I my opinion is that this game is the nost relistic Battle Royale games.</p> 
     
  <h1 style="color:orange;">Far Cry 5</h1>
-<p style="color:orange;"> As you may have know that Far cry 5 or FC 5 was a great game to watch and play. The games is based 
-on the protagonist The Deputy or commonly knows as Rook or Rookie and the antagonists The Seed which take control over the 
-country people and try to save the world from them selves. 
-With game play with most content creators they have taken the initial
-over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it.</p>
+<p style="color:orange;"> As you may have know that Far cry 5 or FC 5 is a great game to watch and play. The games is based 
+on the protagonist The Deputy or commonly knows as Rook or Rookie and the antagonists The Seed family which take control over the 
+country(redneck's) people and try to save the world from them selves. 
+With gameplay with most content creators they have taken the initial
+over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
+    out of 5 stars because I think the the game could have more side missions and for looting system is like the moir eyou loot the higher your progreshing will be.</p>
 
 </body>
 
