--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@ body {
  With the addicting battle royal rules like you only have one life and scavenging,
  but a cautious play isn’t rewarded, and its emphasis on gathering materials help/
 save yourself or to confuse the enemy player.
- Its force the players into combat so the tension builds.
- For many player it feels like they like a small spook that makes Fornite Battle Royale so fun to play. Here is a review 
- from my fellow classmate I think that fortnite is a creative game where 
- there are many different gamemodes and I find the different gamemodes very creative. Further more I like this game because the updates bring many 
- nice and game changing things to the game like the new weapons and also give the game more personality like the different skins. I rate this 4.3 out of 5 stars.</p>
+ It forces the players into combat so the tension builds up.
+ For many players it feels like they like a small spook that makes Fornite Battle Royale so fun to play. Here is a review 
+ from my fellow classmate. I think that fortnite is a creative game where 
+ there are many different gamemodes and I find the different gamemodes very creative. Furthermore, I like this game because the updates bring many 
+ nice and game changing things to the game like the new weapons and also gives the game more personality like the different skins. I rate this 4.3 out of 5 stars.</p>
  <h1 style="color:gold;">PUBG</h1>
  
  <p style="color:gold;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
- a kill or be killer situation.I my opinion is that this game is the nost relistic Battle Royale games.</p> 
+ a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on teh market  of H1Z1 </p> 
     
  <h1 style="color:orange;">Far Cry 5</h1>
 <p style="color:orange;"> As you may have know that Far cry 5 or FC 5 is a great game to watch and play. The games is based 
 on the protagonist The Deputy or commonly knows as Rook or Rookie and the antagonists The Seed family which take control over the 
-country(redneck's) people and try to save the world from them selves. 
+country folk and try to save the world from them selves. 
 With gameplay with most content creators they have taken the initial
 over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
-    out of 5 stars because I think the the game could have more side missions and for looting system is like the moir eyou loot the higher your progreshing will be.</p>
+    out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.</p>
 
 </body>
 
