--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-    background-color:Aqua;
+    background-color:Teal;
 }
 </style>
 <h1 style="color:purple;">Fortnite</h1>
@@ -21,7 +21,8 @@ save yourself or to confuse the enemy player.
  
  <p style="color:gold;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
- a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on teh market  of H1Z1 </p> 
+ a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on the market. When I have played it 
+ it feels like the game can have more varities like limited-gamemodes in Fornite and I think this is a good idea to add.</p> 
     
  <h1 style="color:orange;">Far Cry 5</h1>
 <p style="color:orange;"> As you may have know that Far cry 5 or FC 5 is a great game to watch and play. The games is based 
@@ -29,7 +30,7 @@ on the protagonist The Deputy or commonly knows as Rook or Rookie and the antago
 country folk and try to save the world from them selves. 
 With gameplay with most content creators they have taken the initial
 over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
-    out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.</p>
+out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.</p>
 
 </body>
 
