--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 body {
     padding: 2em;
-    background-color:Teal;
+    background-color: lightblue;
 }
 </style>
 <h1 style="color:purple;">Fortnite</h1>
