--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@ body {
     padding: 2em;
     background-color: lightblue;
 }
+    
+.maintitle {
+    font-size: 72px;
+    }
 </style>
+    
+    <h1 class="maintitle">Game Reviews</h1>
 <h1 style="color:purple;">Fortnite</h1>
 
 <p style="color:purple;">While it’s easy to see why millions of players are starting to play,
