--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ save yourself or to confuse the enemy player.
  from my fellow classmate. I think that fortnite is a creative game where 
  there are many different gamemodes and I find the different gamemodes very creative. Furthermore, I like this game because the updates bring many 
  nice and game changing things to the game like the new weapons and also gives the game more personality like the different skins. I rate this 4.3 out of 5 stars.</p>
- <h1 style="color:gold;">PUBG</h1>
+ <h1 style="color:darkgray;">PUBG</h1>
  
- <p style="color:gold;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
+ <p style="color:darkgray;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
  a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on the market. When I have played it 
  it feels like the game can have more varities like limited-gamemodes in Fornite and I think this is a good idea to add.</p> 
