--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ body {
     <h1 class="maintitle">Game Reviews</h1>
 <h1 style="color:purple;">Fortnite</h1>
 
-<p style="color:purple;">While it’s easy to see why millions of players are starting to play,
+<p style="color:purple;">It’s easy to see why millions of players are starting to play
  Fortnite Battle Royale. 
- With the addicting battle royal rules like you only have one life and scavenging,
+ With the addicting Battle Royale rules like you only have one life and scavenging,
  but a cautious play isn’t rewarded, and its emphasis on gathering materials help/
 save yourself or to confuse the enemy player.
  It forces the players into combat so the tension builds up.
@@ -29,12 +29,13 @@ save yourself or to confuse the enemy player.
  <p style="color:beige;"> Player Unkown Battle Grounds or commonly known as Pubg. The "father" of H1Z1 and Fornite is the most
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
  a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on the market. When I have played it 
- it feels like the game can have more varities like limited-gamemodes in Fornite and I think this is a good idea to add.</p> 
+ it feels like the game can have more varities like limited-gamemodes in Fornite and I think this is a good idea to add. Here is a reveiw of they game by a fellow classmate
+     . </p> 
     
  <h1 style="color:orange;">Far Cry 5</h1>
 <p style="color:orange;"> As you may have know that Far cry 5 or FC 5 is a great game to watch and play. The games is based 
 on the protagonist The Deputy or commonly knows as Rook or Rookie and the antagonists The Seed family which take control over the 
-country folk and try to save the world from them selves. 
+country folk and try to save the world from themselves. 
 With gameplay with most content creators they have taken the initial
 over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
 out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.</p>
