--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ save yourself or to confuse the enemy player.
  realistic Battle Royale. The game puts together 100 palyer aganist each other in a winner takes all and 
  a kill or be killer situation.I my opinion is that this game is the most relistic Battle Royale game on the market. When I have played it 
  it feels like the game can have more varities like limited-gamemodes in Fornite and I think this is a good idea to add. Here is a reveiw of they game by a fellow classmate
-     . </p> 
+  . The reason why I enjoy Player Unknown Batttle Grounds more than Fortnite Battle Royale is that there is more varity of weaponry. Also because of the large map there are vehicles that provide more content for the game making it 
+     more entertaining and because of this if you play with a friend some vehicles such as the buggy has a gun mounted to the top so someone could be driving as your teamate shoots. I would give this game 4/5 stars as it has good 
+     content but it should have a graphics upgrade in future updates. </p> 
     
  <h1 style="color:orange;">Far Cry 5</h1>
 <p style="color:orange;"> As you may have know that Far cry 5 or FC 5 is a great game to watch and play. The games is based 
