--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ on the protagonist The Deputy or commonly knows as Rook or Rookie and the antago
 country folk and try to save the world from themselves. 
 With gameplay with most content creators they have taken the initial
 over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
-out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.</p>
+out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be.. This is another review from a student in my class The Farcry Series is known as you the 
+    player are given choices to be a antagonist or a protaginist. In Farcry 5 there is a villian named </p>
     
     <h1>Tomb Raider</h1>    
 <p>
