--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ out of 5 stars because I think the the game could have more side missions and fo
     player are given choices to be a antagonist or a protaginist. In Farcry 5 there is a villian named </p>
     
     <h1>Forza Horizon 3 </h1>    
-    <p> </p>
+    <p> Forza Horizon 3 is an open world racing game. The game gives the player crossplatform play with Windows and Xbox. </p>
 </body>
 
 </html>
