--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     }
 </style>
     
-    <h1 class="maintitle">Game Reviews</h1>
+    <h1 class="maintitle">Game Reviews</h1>`
 <h1 style="color:purple;">Fortnite</h1>
 
 <p style="color:purple;">It’s easy to see why millions of players are starting to play
@@ -41,7 +41,8 @@ country folk and try to save the world from themselves.
 With gameplay with most content creators they have taken the initial
 over view such as multiplayer to campaign. There is no way to miss out on speical dlcs or promotion packs because it if a new game on the market and many people are playing it. My review would be a 4
 out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be. This is another review from a student in my class. The Farcry Series is known as you the 
-    player are given choices to be a antagonist or a protaginist. In Farcry 5 there is a villian named </p>
+player are given choices to be a antagonist or a protaginist. In Farcry 5 there is a villian named Joesph Seed and you are given choices to either arrest him or not. If you do arrest him a nucleur bomb drops on the town as the rest of your squad dies and it is just you and joseph seed with all of the town dead.
+If you don't arrest him than you leave peacfully with your squad but you plan to comeback with the U.S. Coastguard. </p>
     
     <h1>Forza Horizon 3 </h1>    
     <p> Forza Horizon 3 is an open world racing game. The game gives the player crossplatform play with Windows and Xbox. </p>
