--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@ over view such as multiplayer to campaign. There is no way to miss out on speica
 out of 5 stars because I think the the game could have more side missions and for looting system is like the more you loot the higher your progress will be. This is another review from a student in my class. The Farcry Series is known as you the 
 player are given choices to be a antagonist or a protaginist. In Farcry 5 there is a villian named Joesph Seed and you are given choices to either arrest him or not. If you do arrest him a nucleur bomb drops on the town as the rest of your squad dies and it is just you and joseph seed with all of the town dead.
 If you don't arrest him than you leave peacfully with your squad but you plan to comeback with the U.S. Coastguard. </p>
+    <h1> Rainbow 6 Siege</h1>
     
+    <p> The game Rainbow 6 Siege is a very fun and competative game. With the TTS the Technical Test Server or as I call it the Toxic Tryhard Server. This game needs lots of coordination on both side of teh battle 
+    attack and defence sides. if you want to play with your friend that has a ps4 and you have a pc be sure you won't play with him.</p>
     
 
 </html>
