--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ If you don't arrest him than you leave peacfully with your squad but you plan to
     <h1> Rainbow 6 Siege</h1>
     
     <p> The game Rainbow 6 Siege is a very fun and competative game. With the TTS the Technical Test Server or as I call it the Toxic Tryhard Server. This game needs lots of coordination on both side of teh battle 
-    attack and defence sides. if you want to play with your friend that has a ps4 and you have a pc be sure you won't play with him.</p>
+    attack and defence sides. if you want to play with your friend that has a ps4 and you have a pc be sure you won't play with him. This game has many updates with operation Para Bellum coming out in a few weeks. In my opinion I think that the game gets a 
+    4 out of 5 stars. The game is very realistic with freindly fire and many operators to choose from and each has a differnet ability.</p>
     
 
 </html>
